lrds/bases/backend/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: lrds-v1
  labels:
    app: lrds
    version: v1
spec:
  selector:
    matchLabels:
      app: lrds
      version: v1
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 0
  template:
    metadata:
      labels:
        app: lrds
        version: v1
    spec:
      containers:
        - name: lrds
          image: alexlauni/liftright-data-server:191f73b
          imagePullPolicy: IfNotPresent
          readinessProbe:
            initialDelaySeconds: 5
            periodSeconds: 60
            httpGet:
              path: /v1/rtfb_status/6fcd683c-20d5-415d-a134-1e7d2f780749
              port: 3030
              scheme: HTTP
            timeoutSeconds: 3
            failureThreshold: 5
            successThreshold: 1
          livenessProbe:
            initialDelaySeconds: 1
            periodSeconds: 60
            httpGet:
              path: /v1/heartbeat
              port: 3030
              scheme: HTTP
            timeoutSeconds: 1
            failureThreshold: 1
            successThreshold: 1
          ports:
            - containerPort: 3030
