lrds/bases/backend/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: lrds
  labels:
    app: lrds
spec:
  type: ClusterIP
  ports:
    targetPort: 3030
  selector:
    app: lrds
