lrds/bases/backend/gateway.yaml
---
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: lrds-gateway
spec:
  selector:
    istio: ingressgateway
  servers:
  - port:
      number: 443
      name: https
      protocol: HTTPS
    hosts:
    - "REPLACE_HOST"
    tls:
      credentialName: acme-web-liftright-secret
      mode: SIMPLE
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - "REPLACE_HOST"
