lrds/bases/backend/ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: staging-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  rules:
  - host: k8staging.liftright.dirigim.us
    http:
      paths:
        - backend:
            serviceName: lrds
            servicePort: 80
